# biogpu

./: .gitignore  1M_reads_test.json  1M_reads_test_fixed_fq_mutations.html  1M_reads_test_fixed_fq_mutations.json  1M_reads_test_fixed_fq_mutations.txt  1M_reads_test_fixed_summary.json  1M_reads_test_summary.json  1M_reads_test_with_report.json  1M_reads_test_with_report_fq_mutations.html  1M_reads_test_with_report_fq_mutations.json  1M_reads_test_with_report_fq_mutations.txt  1M_reads_test_with_report_summary.json  569_A_038.json  569_A_038_allele_freq_20250109.json  569_A_038_allele_freq_20250109_clinical_fq_report.html  569_A_038_allele_freq_20250109_clinical_fq_report.json  569_A_038_allele_freq_20250109_clinical_fq_report.txt  569_A_038_allele_freq_20250109_summary.json  569_A_038_clinical_fq_report.html  569_A_038_clinical_fq_report.json  569_A_038_clinical_fq_report.txt  569_A_038_summary.json  BMTPU_fq_results.json  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakeLists_backup_20250609.txt  CMakeLists_diagnostic.mak  COPYRIGHT_FILE_LISTING.txt  COPYRIGHT_NOTICE.txt  Escherichia_coli._mutfasta.fasta  LICENSE  Makefile  Quinolone_resistance_gene_table.csv  Quinolone_resistance_mutation_table.csv  README.md  README_UNIFIED_PIPELINE.md  VRE12_fq_results.json  amr_peptide_sequence.fasta  antlr4-4.10  (+76 more)
archive/2025-06-10_allele_frequency_and_batch_mode/: ARCHIVE_README.md  CHANGES_SUMMARY.md  CMakeLists.txt  working_commands_20250610.txt
archive/2025-06-10_allele_frequency_and_batch_mode/docs/: batch_processing_parser_README.md
archive/2025-06-18_prior_to_LCA_based_DB_build/: ARCHIVE_README.md  CHANGES_SUMMARY.md  CMakeLists.txt
archive/2025-06-18_prior_to_LCA_based_DB_build/docs/: FQ_RESISTANCE_MUTATIONS_README.md  apply_simple_optimizations.md  biogpu_project_plan.md  bloom_sw_configuration_guide.md  bloom_sw_test_results.md  workflow_documentation.md
archive/2025-06-18_prior_to_LCA_based_DB_build/scripts/: download_genomic_library.sh
archive/2025-06-28_streaming-minimizer-taxonomy-working/enhanced_k2like/: CMakeLists.txt  CMakeLists_simple.txt  Make_streaming_minimizer.txt  Makefile.minimizer_test  Makefile.ml_test  Makefile.simple_test  Makefile.streaming_test  Makefile.test_basic  TEST_RESULTS.md  build_taxonomy_only.sh  classification_report_generator.h  debug_script.gdb  fast_enhanced_classifier.h  gpu_kraken_classifier.cu  gpu_kraken_classifier.h  gpu_kraken_classifier_backup.cu  gpu_kraken_database_builder.cu  gpu_kraken_database_builder.h  gpu_minimizer_extraction.cu  gpu_phylogenetic_calculator.cuh  ncbi_taxonomy_loader.h  phase1_enhanced_classification.cu  safe_load_genome_files.cpp  simple_test.cu  streaming_fna_processor.h  test_README.md  test_database_serializer.cu  test_direct_minimizer.cu  test_enhanced_database_simple.cu  test_kraken_fna.cu  test_kraken_format.fna  test_minimal_streaming  test_ml_structures  test_simple.sh  test_streaming_fna.cpp  test_streaming_minimizer_extraction.cu  test_x_sequence  working_test.cu
build_comparison/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pipeline_comparison_test
runtime/kernels/: CMakeLists.txt  CMakeLists_integrated.txt  CMakeLists_unified.txt  CMakeLists_unified_simple.txt  COMPLETE_INTEGRATION_STATUS.md  FINAL_INTEGRATION_SUMMARY.md  GPU_MEMORY_FIXES_SUMMARY.md  INSTALL_INSTRUCTIONS.md  INTEGRATION_SUMMARY.md  PHASE4_BUILD_SUMMARY.md  PHASE_4.6_COMPLETION.md  bloom_filter_usage.md  build_bloom_filter  build_bloom_filter.cpp  build_bloom_filter_simple  build_bloom_filter_simple.cpp  build_combined_bloom.sh  build_complete_unified.sh  build_integrated_final.sh  build_integrated_pipeline.sh  build_integrated_simple.sh  build_kmer_index.cpp  build_minimizer_bloom_filter  build_minimizer_bloom_filter.cpp  build_pangenome_db_dummy.cpp  build_test_pipeline.sh  build_unified_minimal.sh  build_unified_pipeline.sh  extract_fq_genes_fasta.cpp  fastq_reader.cpp  fastq_reader.h  install_dependencies.sh  install_hdf5_commands.sh  install_unified_pipeline.sh  pangenome_graph_types.h  path_attribution_kernel.cu  pipeline_tester  pipeline_tester.cpp  pipeline_tester_bloom  pipeline_tester_clean.cpp  (+4 more)
runtime/kernels/backup_files/: CLEANUP_SUMMARY.md
runtime/kernels/build_complete/: UNIFIED_PIPELINE_SESSION_SUMMARY.md  amr_protein_db  bio_gpu_pipeline  bio_gpu_pipeline_integrated  build_final_integration.sh  demo_final_integration.sh  demo_integrated_amr_only.sh  test_full_integration.sh  test_individual_pipelines.sh  test_integrated_pipeline.sh  test_pipelines.sh  test_summary.md  test_unified_integration.sh  unified_pipeline_complete.cpp  unified_pipeline_process_spawning.cpp
runtime/kernels/build_final/: bio_gpu_pipeline  bio_gpu_pipeline.cpp
runtime/kernels/build_integrated_simple/: bio_gpu_pipeline_integrated.cpp
runtime/kernels/build_unified/: bio_gpu_pipeline  bio_gpu_pipeline_minimal.cpp
runtime/kernels/docs/: profiler_pipeline_status.md
runtime/kernels/genes/: CLAUDE.md  CMakeLists.txt  MakeFile_amr.txt  README_AMR_seqs.txt  ReferenceGeneCatalog.txt  amr_detection  amr_detection_kernels.cu  amr_detection_kernels.h  amr_detection_kernels_wrapper.cu  amr_detection_main.cpp  amr_detection_pipeline.cpp  amr_detection_pipeline.h  amr_detection_pipeline_memory_fix.patch  amr_detection_pipeline_v2.cpp  amr_gene_detector.h  amr_protein_db_link  build_amr_protein_database.cpp  build_amr_protein_db  clinical_amr_report_generator.cpp  clinical_amr_report_generator.h  debug_output.txt  direct_translated_amr_search.cu  hdf5_amr_writer.cpp  hdf5_amr_writer.h  ncbi_amr_database_loader.h  run_amr_pipeline_v2.sh  simple_test_main.cpp  simple_translated_search_test  simplified_translated_search.cu  simplified_translated_search.h  test_amr_loader  test_amr_loader.cpp  test_amr_loader_detailed  test_amr_loader_detailed.cpp  test_arg_assignment.cpp  test_clean_resistance.json  test_clean_resistance_clinical_fq_report.html  test_clean_resistance_clinical_fq_report.json  test_clean_resistance_mutations_report.html  test_csv_parser  (+7 more)
runtime/kernels/pangeome_graph/: fm_index_builder.cpp  implmentation.md  (+4 more)
(+1057 files in other folders)
